#1 Add pwd to know current folder.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ branches:
   - master
   - "/v?\\d+\\.\\d+\\.\\d+/"
 before_script:
+- pwd
 - composer install
 - curl -LSs https://box-project.github.io/box2/installer.php | php
 - php -d phar.readonly=0 ./box.phar build
